--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
                         <div class="input-buttons">
                             <button id="findGuidelinesBtn" class="nav-btn primary">Find Relevant Guidelines</button>
                             <button id="checkGuidelinesBtn" class="nav-btn primary">Check against guidelines</button>
-                            <button id="processBtn" class="nav-btn primary process-btn">
+                            <button id="processBtn" class="nav-btn primary">
                                 <span id="processSpinner" class="spinner" style="display: none;">&#x21BB;</span>
-                                <span>Process</span>
+                                <span>Generate Dynamic Advice</span>
                             </button>
                             <button id="makeDynamicAdviceBtn" class="nav-btn secondary" style="display: none;">
                                 <span id="dynamicAdviceSpinner" class="spinner" style="display: none;">&#x21BB;</span>
