--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 </div>
                 <div id="transcriptColumn" class="column">
                     <div class="user-input-section">
-                        <textarea id="userInput" class="expandable-input" placeholder="Enter your notes here..." rows="3"></textarea>
+                        <textarea id="userInput" class="expandable-input" placeholder="Record a transcript, enter a clinical note or ask a question here..." rows="3"></textarea>
                         <div class="input-buttons">
                             <button id="findGuidelinesBtn" class="nav-btn primary">Find Relevant Guidelines</button>
                             <button id="checkGuidelinesBtn" class="nav-btn primary">Check against guidelines</button>
