--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
                 <!-- Buttons have been moved to the settings menu -->
             </div>
             <div class="right-content">
+                <button id="recordBtn" class="nav-btn">
+                    <span id="recordSymbol" class="record-symbol"></span>Record
+                </button>
                 <div id="settingsContainer" class="settings-container">
                     <button id="settingsBtn" class="nav-btn">&#9881;</button>
                     <div id="settingsMenu" class="settings-menu hidden">
@@ -161,9 +164,6 @@
                         </button>
                         <button id="promptsBtn" class="menu-item">Prompts</button>
                         <button id="guidelinesBtn" class="menu-item">Guidelines</button>
-                        <button id="recordBtn" class="menu-item">
-                            <span id="recordSymbol" class="record-symbol"></span>Record
-                        </button>
                         <button id="actionBtn" class="menu-item">
                             <span id="actionSpinner" class="spinner" style="display: none;">&#x21BB;</span>
                             <span id="actionText">Process</span>
