--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
             flex-wrap: wrap;
         }
         
+        /* Make the clerky logo on landing page twice as big */
+        .landing-page h1 {
+            transform: scale(2);
+            margin: 1em 0;
+        }
+        
         .nav-btn {
             margin: 0 5px;
         }
