--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                 <span id="processSpinner" class="spinner" style="display: none;">&#x21BB;</span>
                                 <span>Generate Dynamic Advice</span>
                             </button>
-                            <button id="makeDynamicAdviceBtn" class="nav-btn secondary" style="display: none;">
+                            <button id="makeDynamicAdviceBtn" class="nav-btn primary" style="display: none;">
                                 <span id="dynamicAdviceSpinner" class="spinner" style="display: none;">&#x21BB;</span>
                                 <span>Make Advice Dynamic</span>
                             </button>
