--- a/index.html
+++ b/index.html
@@ -191,10 +191,6 @@
                             <span id="actionSpinner" class="spinner" style="display: none;">&#x21BB;</span>
                             <span id="actionText">Process</span>
                         </button>
-                        <button id="generateClinicalNoteBtn" class="menu-item">
-                            <span id="spinner" class="spinner" style="display: none;">&#x21BB;</span>
-                            <span id="generateText">Note</span>
-                        </button>
                         <button id="xCheckBtn" class="menu-item">
                             <span id="xCheckSpinner" class="spinner" style="display: none;">&#x21BB;</span>
                             <span id="xCheckText">Verify</span>
@@ -253,6 +249,10 @@
                             <button id="processBtn" class="nav-btn primary">
                                 <span id="processSpinner" class="spinner" style="display: none;">&#x21BB;</span>
                                 <span>Generate Dynamic Advice</span>
+                            </button>
+                            <button id="generateClinicalNoteBtn" class="nav-btn secondary">
+                                <span id="spinner" class="spinner" style="display: none;">&#x21BB;</span>
+                                <span id="generateText">Note</span>
                             </button>
                             <button id="makeDynamicAdviceBtn" class="nav-btn primary" style="display: none;">
                                 <span id="dynamicAdviceSpinner" class="spinner" style="display: none;">&#x21BB;</span>
