--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
                             <button id="checkGuidelinesBtn" class="nav-btn primary" style="display: none;">Check against guidelines</button>
                             <button id="processBtn" class="nav-btn primary">
                                 <span id="processSpinner" class="spinner" style="display: none;">&#x21BB;</span>
-                                <span>Generate Dynamic Advice</span>
+                                <span>Dynamic Advice</span>
                             </button>
                             <button id="generateClinicalNoteBtn" class="nav-btn secondary">
                                 <span id="spinner" class="spinner" style="display: none;">&#x21BB;</span>
-                                <span id="generateText">Note</span>
+                                <span id="generateText">Generate Note</span>
                             </button>
                             <button id="makeDynamicAdviceBtn" class="nav-btn primary" style="display: none;">
                                 <span id="dynamicAdviceSpinner" class="spinner" style="display: none;">&#x21BB;</span>
