--- a/dev.html
+++ b/dev.html
@@ -243,6 +243,7 @@
                 <button id="testServerBtn" class="dev-btn">Test Server Connection</button>
                 <button id="testGitHubBtn" class="dev-btn">Test GitHub Access</button>
                 <button id="testOpenAIBtn" class="dev-btn">Test OpenAI Access</button>
+                <button id="repairContentBtn" class="dev-btn" style="background-color: #28a745; color: white;">🔧 Repair Content Issues</button>
                 <button id="deleteAllSummariesBtn" class="dev-btn" style="background-color: #d9534f; color: white;">Delete All Summaries</button>
                 <button id="deleteAllGuidelineDataBtn" class="dev-btn" style="background-color: #d9534f; color: white;">Delete All Guideline Data</button>
             </div>
