--- a/dev.html
+++ b/dev.html
@@ -252,7 +252,7 @@
     </div>
     <div class="content-wrapper">
         <div class="tab-content" id="algosContent">
-            <iframe src="https://iannouvel.github.io/clerky/algos.html" frameborder="0" class="content-frame"></iframe>
+            <iframe src="algos.html" frameborder="0" class="content-frame"></iframe>
         </div>
         <div class="tab-content" id="logsContent">
             <div class="log-navigation">
