--- a/dev.html
+++ b/dev.html
@@ -244,7 +244,7 @@
                 <button id="testGitHubBtn" class="dev-btn">Test GitHub Access</button>
                 <button id="testOpenAIBtn" class="dev-btn">Test OpenAI Access</button>
                 <button id="repairContentBtn" class="dev-btn" style="background-color: #28a745; color: white;">🔧 Repair Content Issues</button>
-                <button id="uploadPDFContentBtn" class="dev-btn" style="background-color: #007bff; color: white;">📄 Upload PDF Content to Firestore</button>
+                <button id="uploadPDFsToStorageBtn" class="dev-btn" style="background-color: #ff6b35; color: white;">🗂️ Migrate PDFs from GitHub to Firebase Storage</button>
                 <button id="migrateDatabaseBtn" class="dev-btn" style="background-color: #17a2b8; color: white;">🔄 Migrate to Single Collection</button>
                 <button id="deleteAllSummariesBtn" class="dev-btn" style="background-color: #d9534f; color: white;">Delete All Summaries</button>
                 <button id="deleteAllGuidelineDataBtn" class="dev-btn" style="background-color: #d9534f; color: white;">Delete All Guideline Data</button>
